# hpc-model-utils

./: .gitignore  README.md  dev-requirements.txt  main.py  pos_processa_decomp.py  pos_processa_dessem.py  pos_processa_newave.py  pre_processa_dessem.py  programas_auxiliares_newave.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
app/: cli.py  utils.py
app/adapter/repository/: __init__.py  abstractmodel.py  decomp.py  dessem.py  newave.py
app/decomp/: pos_processa_decomp.py
app/dessem/: pos_processa_dessem.py  pre_processa_dessem.py
app/models/: runstatus.py
app/newave/: pos_processa_newave.py  programas_auxiliares_newave.py
app/utils/: commands.py  constants.py  fs.py  hashing.py  log.py  s3.py  scheduler.py  terminal.py  zipfileparallel.py
assets/jobs/: decomp.job  dessem.sh  newave.job  newave_main.job  newave_post.job
jobs/: dessem.sh  mpi_decomp.job  mpi_newave.job
tests/adapter/repository/: test_decomp.py  test_newave.py
tests/mocks/: decomp.py  newave.py
tuber/: cli.py  utils.py  zipfileparallel.py
tuber/decomp/: pos_processa_decomp.py
tuber/dessem/: pos_processa_dessem.py  pre_processa_dessem.py
tuber/newave/: pos_processa_newave.py  programas_auxiliares_newave.py
