[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hpc-model-utils"
dynamic = ["version"]
dependencies = [
  "boto3>=1.35.98",
  "botocore>=1.35.98",
  "click>=8.1.8",
  "idecomp>=1.7.0",
  "idessem>=0.0.23",
  "inewave>=1.10.0",
]
requires-python = ">= 3.10"
authors = [
  {name = "Mariana Noel", email = "marianasimoesnoel@gmail.com"},
  {name = "Rogerio Alves", email = "rogerioalves.ee@gmail.com"},
]
description = "hpc-model-utils"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pytest",
  "boto3-stubs[essential]"
]

[project.urls]
Repository = "https://github.com/marianasnoel/hpc-model-utils/"

[project.scripts]
hpc-model-utils = "main:main"

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
include = [
  "main.py",
  "app/",
]

[tool.ruff]
line-length = 80
